# course_project_3_job_search

./: README.md  config.py  main.py  pyproject.toml
src/: api_hh.py
